# whisper_wellness

./: .dockerignore  .env  .gitignore  .windsurfrules  Dockerfile  Dockerfile.frontend  EmojiMe.md  README.md  business_requirements.md  check-mongo-connection.js  dev_notes.md  docker-compose.yml  generate-mongodb-certs.sh  git_sync.md  init-mongo.js  init-mongo.sh  mongo-cert.crt  mongo.pem  mongodb.cnf  mongodb.crt  mongodb.key  name_potential.md  package-lock.json  package.json  product_requirements.md  pwa_vs_native_comparison.md  pyproject.toml  release_notes.md  requirements.txt  rt.md  system_design.md  tech_stack.md  test-mongo-connection.js  test-mongodb-connection.js  test-mongodb-connection.ts  test-mongoose-connection.js  tsconfig.json
apps/api/: .env  .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/scripts/: check-mongodb.js  cleanup-db.js  test-mongodb-connection.ts  test-users-native.js
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  auth.types.ts
apps/api/src/auth/dto/: register-user.dto.ts
apps/api/src/auth/guards/: roles.guard.ts
apps/api/src/auth/strategies/: jwt.strategy.ts  local.strategy.ts
apps/api/src/chat/: chat.controller.ts  chat.module.ts  chat.service.ts
apps/api/src/chat/dto/: create-chat-message.dto.ts  update-chat-message.dto.ts
apps/api/src/chat/schemas/: chat-message.schema.ts
apps/api/src/config/: configuration.ts
apps/api/src/database/: database.module.ts  mongodb.service.ts  qdrant.service.ts
apps/api/src/journal/: journal.controller.ts  journal.module.ts  journal.service.ts
apps/api/src/journal/dto/: create-journal-entry.dto.ts  update-journal-entry.dto.ts
apps/api/src/users/: users.controller.ts  users.service.ts
apps/api/test/: jest-e2e.json  setup.ts
apps/fastapi/: .env  .env.example  Dockerfile  README.md  requirements.txt
apps/fastapi/app/: main.py
apps/fastapi/app/api/v1/: api.py
apps/fastapi/app/core/: config.py
apps/fastapi/app/db/: __init__.py  mongodb.py  qdrant.py
apps/fastapi/scripts/: check_connections.py
apps/frontend/: .stylelintrc.json  Dockerfile  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
apps/frontend/src/test/: setup.ts
docs/: 0-dev_notes.md  03-product_requirements.md  05-scope_statement.md  06-system_design.md  09-project_plan.md  1-business_requirements.md  10-communication_plan.md  11-risk_management_plan.md  12-release_notes.md  13-scratch.md  2-product_requirements.md  3-requirements_tracking.md  4-system_design.md  5-tech_stack.md  7-scratch.md  EmojiMe.md  README.md  business_requirements.md  dev_env.md  feedback-01.md  markdown_cheatsheet.md  mongodb_schema.md  project_structure.md  release_notes.md  requirements_tracking.md  scratch.md
docs/feedback/: feedback_analysis-02.md
docs/product_eval/: google_auth_claude.md  google_auth_gpt.md
docs/setup/: 0-dev_env.md  mongodb_tls_setup.md
mh_data/: counserchat_data.md  youtube_urls.md
mongo-certs/: mongo-cert.key
mongodb-certs/: mongo-ca.crt  mongo-ca.key  mongo-ca.srl  mongodb.crt  mongodb.csr  mongodb.ext  mongodb.key  mongodb.pem
(+4 files in other folders)
