[build-system]
requires = ["setuptools>=61.0", "wheel", "uv>=0.1.0"]
build-backend = "setuptools.build_meta"
backend-path = ["uv"]

[tool.uv]
# UV specific configurations
pip = { upgrade = true, upgrade-package = ["pip", "setuptools", "wheel"] }

[project]
name = "whisperwell"
version = "0.1.0"
description = "WhisperWell: AI-powered document processing and knowledge management system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General"
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pymongo>=4.3.3",
    "neo4j>=5.8.0",
    "qdrant-client>=1.1.7",
    "sentence-transformers>=2.2.2",
    "transformers>=4.28.0",
    "torch>=2.0.0",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "python-slugify>=8.0.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "pylint>=2.17.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipython>=8.12.0",
    "pytest-mock>=3.10.0"
]

docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.20.0"
]

[project.urls]
Homepage = "https://github.com/your-org/whisperwell"
Documentation = "https://whisperwell.readthedocs.io"
Repository = "https://github.com/your-org/whisperwell"
Changelog = "https://github.com/your-org/whisperwell/releases"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true

[tool.pylint]
max-line-length = 88
indent-string = '    '
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-attributes = 10
max-public-methods = 20
max-module-lines = 1000
max-parents = 7

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --cov=whisperwell --cov-report=term-missing"
asyncio_mode = "auto"

[metadata]
license = "MIT"
license_files = ["LICENSE"]
